# scholar-vault

./: .gitignore  context.md.backup  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/.sqlx/: query-01c26143c4d0e330a6b43165bbef22baf2de23acf8f12feee74253fa07c55eee.json  query-0491a1bea2060576b3a3c0116d8e9caf4dd7af8b266a9dea90bea963511be0c6.json  query-061fedfa617f3fac535de23d7dd2fa4708a5101a52ed2e02c117d5b6f51e7f6d.json  query-0f5bfd4e8d41d6cdc7ac16980fff061b594963a03a01206d7aa2bae6bba70508.json  query-1020a99f977381b0bda4dad9ea4ce5e0cb01ff085d6e555ff595b84250df8bae.json  query-1d19a40de29686791e9d2879dbad819139481bb0bed009b9675cf7dd8a1d1f6e.json  query-1db683eec410e28ea4be8f16e99578116c5c1e925a8bc15acc47f86084941042.json  query-2b75cd60622d3e7353130c61d1a74da44757fa3eb7a29a847691fd92680c6108.json  query-39e759cf435e0c341f6c71107c039c73edfab6b0dcb57e646723914b712efd0b.json  query-49d7f03923028a343580c5151fb310aaf6d48417815d54772899c5e995570d1f.json  query-61856159dbce26a59eed12a4d9e3d952bd96176549f7f5557ffdedb15af5236d.json  query-6faaec5f63e313b8072b3433e50b29e1c80b2279877df35940e96eb1bf2d597a.json  query-7740e170f4fb9de24debf192c8286fc65df613dfb993a2f75142f99d838dd625.json  query-8b3c3ae60513416c25163bbe44970cdb69c7f5eb5c2df159cd6aed4b2855f02f.json  query-8c77dafe09bb3b1570c90a36ca4dbb8f1c0df519ce311465faf16b4e2795036c.json  query-9f19d169f18ce13816a28e4d7c1230bcc76bfb803300e6981506ab78d14d10b4.json  query-ab979ee946b8be738894b5842106ab867df384edb832274ac376dd3cb653c40c.json  (+7 more)
(+50 files in other folders)
