[package]
name = "scholarvault-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"]}
tokio-util = { version = "0.7", features = ["io"] }
tokio = { version = "1", features = ["full", "fs"] }
serde ={ version="1.0", features= ["derive"]}
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
dotenvy = "0.15"
axum-extra = { version = "0.10", features = ["typed-header"] }
sqlx = { version = "0.8", features= ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"]}
uuid = { version = "1.0", features = ["v4", "serde"]}
chrono = { version= "0.4", features=["serde"]}
tower-http = {version = "0.6", features = ["cors", "fs", "limit"]}